# components/coopback/src/docs/swagger.json
@@ -17,20 +17,14 @@
     "/auth/register": {
       "post": {
         "summary": "Register as user",
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "requestBody": {
           "required": true,
           "content": {
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": [
-                  "name",
-                  "email",
-                  "password"
-                ],
+                "required": ["name", "email", "password"],
                 "properties": {
                   "name": {
                     "type": "string"
@@ -84,19 +78,14 @@
     "/auth/login": {
       "post": {
         "summary": "Login",
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "requestBody": {
           "required": true,
           "content": {
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": [
-                  "email",
-                  "password"
-                ],
+                "required": ["email", "password"],
                 "properties": {
                   "email": {
                     "type": "string",
@@ -154,18 +143,14 @@
     "/auth/logout": {
       "post": {
         "summary": "Logout",
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "requestBody": {
           "required": true,
           "content": {
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": [
-                  "refreshToken"
-                ],
+                "required": ["refreshToken"],
                 "properties": {
                   "refreshToken": {
                     "type": "string"
@@ -191,18 +176,14 @@
     "/auth/refresh-tokens": {
       "post": {
         "summary": "Refresh auth tokens",
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "requestBody": {
           "required": true,
           "content": {
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": [
-                  "refreshToken"
-                ],
+                "required": ["refreshToken"],
                 "properties": {
                   "refreshToken": {
                     "type": "string"
@@ -236,18 +217,14 @@
       "post": {
         "summary": "Forgot password",
         "description": "An email will be sent to reset password.",
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "requestBody": {
           "required": true,
           "content": {
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": [
-                  "email"
-                ],
+                "required": ["email"],
                 "properties": {
                   "email": {
                     "type": "string",
@@ -274,9 +251,7 @@
     "/auth/reset-password": {
       "post": {
         "summary": "Reset password",
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "parameters": [
           {
             "in": "query",
@@ -294,9 +269,7 @@
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": [
-                  "password"
-                ],
+                "required": ["password"],
                 "properties": {
                   "password": {
                     "type": "string",
@@ -337,9 +310,7 @@
       "post": {
         "summary": "Send verification email",
         "description": "An email will be sent to verify email.",
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "security": [
           {
             "bearerAuth": []
@@ -358,9 +329,7 @@
     "/auth/verify-email": {
       "post": {
         "summary": "verify email",
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "parameters": [
           {
             "in": "query",
@@ -395,9 +364,7 @@
     },
     "/orders/ipn": {
       "post": {
-        "tags": [
-          "Orders"
-        ],
+        "tags": ["Orders"],
         "summary": "Обработка IPN уведомления",
         "description": "Маршрут для обработки IPN уведомления.",
         "responses": {
@@ -409,9 +376,7 @@
     },
     "/orders/initial": {
       "post": {
-        "tags": [
-          "Orders"
-        ],
+        "tags": ["Orders"],
         "summary": "Создание регистрационного платежа",
         "description": "Маршрут для создания регистрационного платежа.",
         "security": [
@@ -445,9 +410,7 @@
     },
     "/orders/deposit": {
       "post": {
-        "tags": [
-          "Orders"
-        ],
+        "tags": ["Orders"],
         "summary": "Создание депозита в кошелёк",
         "description": "Маршрут для создания депозита.",
         "security": [
@@ -483,9 +446,7 @@
       "post": {
         "summary": "Создать пользователя",
         "description": "Только администраторы могут создавать новых пользователей.",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "security": [
           {
             "bearerAuth": []
@@ -526,9 +487,7 @@
       "get": {
         "summary": "Получить всех пользователей",
         "description": "Только администратор может получить всех пользователей",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "security": [
           {
             "bearerAuth": []
@@ -628,9 +587,7 @@
       "get": {
         "summary": "Получить пользователя",
         "description": "Авторизованные пользователи могут получать только свою собственную информацию. Только администраторы могут получать информацию о других пользователях.",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "security": [
           {
             "bearerAuth": []
@@ -672,9 +629,7 @@
       "patch": {
         "summary": "Обновить пользователя",
         "description": "Только администраторы могут обновлять информацию о других пользователях.",
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "security": [
           {
             "bearerAuth": []
@@ -789,25 +744,14 @@
           },
           "status": {
             "type": "string",
-            "enum": [
-              "created",
-              "joined",
-              "payed",
-              "registered",
-              "active",
-              "blocked"
-            ]
+            "enum": ["created", "joined", "payed", "registered", "active", "blocked"]
           },
           "is_registered": {
             "type": "boolean"
           },
           "type": {
             "type": "string",
-            "enum": [
-              "individual",
-              "entrepreneur",
-              "organization"
-            ]
+            "enum": ["individual", "entrepreneur", "organization"]
           },
           "public_key": {
             "type": "string"
@@ -843,12 +787,9 @@
       },
       "ICreatedPayment": {
         "type": "object",
-        "required": [
-          "order_id",
-          "confirmation_token"
-        ],
+        "required": ["order_num", "confirmation_token"],
         "properties": {
-          "order_id": {
+          "order_num": {
             "type": "number"
           },
           "confirmation_token": {
@@ -858,10 +799,7 @@
       },
       "ICreateDeposit": {
         "type": "object",
-        "required": [
-          "username",
-          "quantity"
-        ],
+        "required": ["username", "quantity"],
         "properties": {
           "username": {
             "type": "string"
@@ -873,9 +811,7 @@
       },
       "ICreateInitialPayment": {
         "type": "object",
-        "required": [
-          "username"
-        ],
+        "required": ["username"],
         "properties": {
           "username": {
             "type": "string"
@@ -908,15 +844,7 @@
             "format": "email"
           }
         },
-        "required": [
-          "first_name",
-          "last_name",
-          "middle_name",
-          "birthdate",
-          "full_address",
-          "phone",
-          "email"
-        ]
+        "required": ["first_name", "last_name", "middle_name", "birthdate", "full_address", "phone", "email"]
       },
       "RepresentedBySchema": {
         "type": "object",
@@ -937,13 +865,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "first_name",
-          "last_name",
-          "middle_name",
-          "position",
-          "based_on"
-        ]
+        "required": ["first_name", "last_name", "middle_name", "position", "based_on"]
       },
       "RussiaDetailsSchema": {
         "type": "object",
@@ -955,10 +877,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "inn",
-          "ogrn"
-        ]
+        "required": ["inn", "ogrn"]
       },
       "RussianBankDetailsSchema": {
         "type": "object",
@@ -976,22 +895,14 @@
             "type": "string"
           }
         },
-        "required": [
-          "bik",
-          "inn",
-          "corr",
-          "kpp"
-        ]
+        "required": ["bik", "inn", "corr", "kpp"]
       },
       "IBankAccount": {
         "type": "object",
         "properties": {
           "currency": {
             "type": "string",
-            "enum": [
-              "RUB",
-              "Other"
-            ]
+            "enum": ["RUB", "Other"]
           },
           "card_number": {
             "type": "string"
@@ -1006,13 +917,7 @@
             "$ref": "#/components/schemas/RussianBankDetailsSchema"
           }
         },
-        "required": [
-          "currency",
-          "card_number",
-          "bank_name",
-          "account_number",
-          "details"
-        ]
+        "required": ["currency", "card_number", "bank_name", "account_number", "details"]
       },
       "IOrganizationData": {
         "type": "object",
@@ -1032,10 +937,7 @@
           },
           "country": {
             "type": "string",
-            "enum": [
-              "Russia",
-              "Other"
-            ]
+            "enum": ["Russia", "Other"]
           },
           "city": {
             "type": "string"
@@ -1095,10 +997,7 @@
           },
           "country": {
             "type": "string",
-            "enum": [
-              "Russia",
-              "Other"
-            ]
+            "enum": ["Russia", "Other"]
           },
           "city": {
             "type": "string"
@@ -1139,10 +1038,7 @@
           },
           "role": {
             "type": "string",
-            "enum": [
-              "user",
-              "admin"
-            ]
+            "enum": ["user", "admin"]
           },
           "public_key": {
             "type": "string"
@@ -1157,11 +1053,7 @@
           },
           "type": {
             "type": "string",
-            "enum": [
-              "individual",
-              "entrepreneur",
-              "organization"
-            ]
+            "enum": ["individual", "entrepreneur", "organization"]
           },
           "individual_data": {
             "$ref": "#/components/schemas/IIndividualData"
@@ -1173,14 +1065,7 @@
             "$ref": "#/components/schemas/IEntrepreneurData"
           }
         },
-        "required": [
-          "email",
-          "password",
-          "role",
-          "public_key",
-          "username",
-          "type"
-        ]
+        "required": ["email", "password", "role", "public_key", "username", "type"]
       },
       "IDocument": {
         "type": "object",
@@ -1198,12 +1083,7 @@
             "type": "object"
           }
         },
-        "required": [
-          "hash",
-          "signature",
-          "public_key",
-          "meta"
-        ]
+        "required": ["hash", "signature", "public_key", "meta"]
       },
       "IJoinCooperative": {
         "type": "object",
@@ -1215,10 +1095,7 @@
             "$ref": "#/components/schemas/IDocument"
           }
         },
-        "required": [
-          "username",
-          "document"
-        ]
+        "required": ["username", "document"]
       }
     },
     "responses": {
