# components/coopback/src/types/order.types.ts
@@ -1,6 +1,31 @@
 import type { ObjectId } from 'mongoose';
-import type { IUser } from '../models/user.model';
-import type { IOrder } from '../models/order.model';
+import type { IUser } from '../types/user.types';
+
+export enum orderStatus {
+  'pending' = 'pending',
+  'paid' = 'paid',
+  'completed' = 'completed',
+  'failed' = 'failed',
+  'expired' = 'expired',
+  'refunded' = 'refunded',
+}
+
+export interface IOrder {
+  id?: string;
+  order_num?: number;
+  secret: string;
+  creator: string;
+  status: orderStatus;
+  type: 'registration' | 'deposit';
+  provider: string;
+  message?: string;
+  username: string;
+  quantity: string;
+  symbol: string;
+  details?: PaymentDetails;
+  expired_at?: Date;
+  user: ObjectId;
+}
 
 export interface IOrderResponse extends Omit<IOrder, 'user'> {
   user: IUser;
